# engine1

./: .gitignore  BioGears.cmake  CMakeLists.txt  CONTRIBUTING.md  Engine.cmake  EngineJNI.cmake  NOTICE  Pulse.cmake  PulseCLR.cmake  PulseCSharp.cmake  PulseJNI.cmake  ReadMe.md  SuperBuild.cmake
cdm/: .classpath  CDM.cmake  CDMJNI.cmake  CMakeLists.txt
cdm/cpp/: CommonDataModel.h  CommonDataModelJNI.cpp  Doxy.h  Macros.h  PhysiologyEngine.h  Serializer.h  stdafx.cpp  stdafx.h
cdm/cpp/circuit/: SECircuit.h  SECircuit.inl  SECircuitCalculator.cpp  SECircuitCalculator.h  SECircuitCalculator.inl  SECircuitManager.cpp  SECircuitManager.h  SECircuitNode.cpp  SECircuitNode.h  SECircuitNode.inl  SECircuitPath.cpp  SECircuitPath.h  (+1 more)
cmake/: BioGears.cmake  BioGearsEngine.cmake  BioGearsScenarioDriver.cmake  CDM.cmake  CDMBindings.cmake  Engine.cmake  ExternalDependencies.cmake  External_Eigen.cmake  External_log4cpp.cmake  External_xerces.cmake  External_xsd.cmake  FindDirent.cmake  FindLog4cpp.cmake  FindProtoBuf.cmake  FindXSD.cmake  GenerateCDMBindings.cmake  PulseConfig.cmake.in  SchemaBindings.cmake  Scripts.cmake  log4cpp.cmake
cmake/log4cpp/: CMakeLists.txt
cmake/log4cpp-patches/: CMakeLists.txt  config.guess
data/: Data.xlsx
docs/: BioGears.bib  Sources.bib
docs/Doxygen/: footer.html  full.doxy.in  header.html  nocode.doxy  validationonly.doxy
docs/Figures/: AnesthesiaMachineWorking.xlsx  BloodChemistryWorking.pptx  BloodChemistryWorking.xlsx  EnvironmentWorking.pptx  EnvironmentWorking.xlsx  RenalWorking.xlsx  RespiratoryWorking.xlsx  TissueWorking.pptx  ~$FourCompartmentWorking.xlsx
docs/Markdown/: CDM.md  Credits.md  ExtraFAQ.md  FAQ.md  Interface.md  License.md  MainPage.md  MainPageFAQ.md  Publications.md  SDK.md  ScenarioFile.md  ScenarioXMLFile.md  SourceCode.md  Versioning.md
docs/Methodology/: AnesthesiaMachineMethodology.md  BloodChemistryMethodology.md  CardiovascularMethodology.md  CircuitMethodology.md  DrugsMethodology.md  EndocrineMethodology.md  EnergyMethodology.md  EnvironmentMethodology.md  GastrointestinalMethodology.md  InhalerMethodology.md  NervousMethodology.md  PatientMethodology.md  RenalMethodology.md  RespiratoryMethodology.md  SubstanceTransportMethodology.md  SystemMethodology.md  TissueMethodology.md
engine/: .classpath  CMakeLists.txt  Engine.cmake  EngineJNI.cmake  ScenarioDriver.cmake
engine/clr/: PulseEngine.cpp  PulseEngine.h
engine/cpp/: BioGearsEngineJNI.cpp  BioGearsEngineJNI.h  BioGearsPhysiologyEngine.h  PulseConfiguration.cpp  PulseConfiguration.h  PulseEngineJNI.cpp  PulseEngineJNI.h  PulsePhysiologyEngine.h  PulseScenario.cpp  PulseScenario.h  PulseScenarioDriver.cpp  PulseScenarioDriver.h  Verification.h  stdafx.cpp  stdafx.h
engine/csharp/: PulseEngine.cpp  PulseEngine.h
howto/cpp/: HowTo-AnesthesiaMachine.cpp  HowTo-Asthma.cpp  HowTo-COPD.cpp  HowTo-ConsumeNutrients.cpp  HowTo-CreateAPatient.cpp  HowTo-Hemorrhage.cpp  HowTo-LobarPneumonia.cpp  HowTo-MechanicalVentilation.cpp  HowTo-RunScenario.cpp
schema/: .classpath  .project  CMakeLists.txt  GenerateCDMBindings.cmake
schema/cpp/custom-double/: double-serialization.hxx
schema/proto/cdm/: Actions.proto  AnesthesiaMachine.proto  AnesthesiaMachineActions.proto  Circuit.proto  Circuit.xsd  Compartment.proto  Compartment.xsd  Conditions.proto  ElectroCardioGram.proto  Engine.proto  EngineConfiguration.proto  EngineState.proto  Enums.proto  Environment.proto  EnvironmentActions.proto  EnvironmentConditions.proto  Inhaler.proto  Inhaler.xsd  InhalerActions.proto  Patient.proto  PatientActions.proto  PatientAssessments.proto  PatientConditions.proto  PatientConditions.xsd  PatientNutrition.proto  Physiology.proto  Physiology.xsd  Properties.proto  Properties.xsd  Scenario.proto  Substance.proto  Substance.xsd  SubstanceQuantity.proto  System.xsd  TestReport.proto
schema/proto/engine/: BioGearsConfiguration.xsd  BioGearsPhysiology.xsd  Engine.proto  EngineConfiguration.proto  EngineEnvironment.proto  EngineEquipment.proto  EnginePhysiology.proto  EngineState.proto
schema/xsd/: BioGearsDataModel.xsd
schema/xsd/biogears/: BioGearsConfiguration.xsd
schema/xsd/cdm/: Anesthesia.xsd  AnesthesiaActions.xsd  ElectroCardioGram.xsd  Environment.xsd  EnvironmentActions.xsd  EnvironmentConditions.xsd  InhalerActions.xsd  PatientActions.xsd  PatientAssessments.xsd  Physiology.xsd  TestReport.xsd
sdk/: .classpath  .project  CMakeLists.txt  sdk.cmake
sdk/howto/cpp/: BioGearsEngineHowTo.cpp  BioGearsEngineHowTo.h  EngineHowTo.cpp  EngineHowTo.h  HowTo-AirwayObstruction.cpp  HowTo-AnesthesiaMachine.cpp  HowTo-Asthma.cpp  HowTo-BolusDrug.cpp  HowTo-BrainInjury.cpp  HowTo-COPD.cpp  HowTo-CPR.cpp  HowTo-ConcurrentEngines.cpp  HowTo-ConsumeNutrients.cpp  HowTo-CreateAPatient.cpp  HowTo-EngineUse.cpp  HowTo-EnvironmentChange.cpp  HowTo-Exercise.cpp  HowTo-Hemorrhage.cpp  HowTo-LobarPneumonia.cpp  HowTo-MechanicalVentilation.cpp  HowTo-PulmonaryFunctionTest.cpp  HowTo-RunScenario.cpp  HowTo-RunThreaded.cpp  HowTo-RunThreaded.h  HowTo-Sandbox.cpp  HowTo-SceanrioBase.cpp  HowTo-Smoke.cpp  HowTo-TensionPneumothorax.cpp
sdk/howto/csharp/: HowToCSharp.csproj  HowToCSharp.sln  Program.cs  RealTimePulse.cs  test.cs
sdk/howto/csharp/Properties/: AssemblyInfo.cs
sdk/howto/java/mil/tatrc/physiology/biogears/engine/: HowTo_EngineUse.java  HowTo_RunScenario.java
sdk/howto/java/mil/tatrc/physiology/pulse/engine/: HowTo_EngineUse.java  HowTo_RunScenario.java
test/: .classpath  .project  BioGearsUnitTests.cmake  CDMUnitTests.cmake  CMakeLists.txt  EngineUnitTests.cmake  TestCDM.cmake  TestEngine.cmake  UnitTestDriver.cmake
test/config/: BGEUnitTests.config  CDMUnitTests.config  Characterize.config  DebugPlots.config  DebugRun.config  EngineUnitTests.config  InitialPatientStates.config  LongVerificationScenarios.config  PlotRun.config  ValidationDrugs.config  ValidationPatients.config  ValidationSystems.config  ValidationTables.config  VerificationScenarios.config
test/validation/: SystemValidationData.xlsx
verification/: CMakeLists.txt  verification.zip.sha512
(+1074 files in other folders)
